--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,29 +1,29 @@
 @font-face {
   font-family: "NothingYouCouldDo";
-  font-display: fallback;
   src: local('NothingYouCouldDo'), url("../fonts/NothingYouCouldDo.ttf") format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "RedHatText";
-  font-display: fallback;
   src: local('RedHatText'), url("../fonts/RedHatText.ttf") format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "BebasNeue";
-  font-display: fallback;
   src: local('BebasNeue'), url("../fonts/BebasNeue.ttf") format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: "BodoniModa";
-  font-display: fallback;
   src: local('BodoniModa'), url("../fonts/BodoniModa.ttf") format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
