--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,3 +27,25 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "GravitasOne";
+  src: local('GravitasOne'), url("../fonts/GravitasOne.ttf") format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Candal";
+  src: local('Candal'), url("../fonts/Candal.ttf") format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "CaudexItalic";
+  src: local('CaudexItalic'), url("../fonts/CaudexItalic.ttf") format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
